# ComputerVisionCourse

hw1/: CMakeLists.txt  hw1.cpp  slic.cpp
hw2/: .gitignore  CMakeLists.txt  andrey.cpp  haarcascade_eye_tree_eyeglasses.xml  hw2.cpp
hw2/dlibTest/: .gitignore  CMakeLists.txt  dlibFun.cpp  faceAlignment.cpp
hw3/: .gitignore  CMakeLists.txt  hw3.cpp
